前后端合并

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>çˆ±è´­ç‰©</title>
+	<meta charset="gbk">
+	<title>°®¹ºÎï</title>
 	<link rel="stylesheet" href="../css/common.css">
 	<link rel="shortcut icon" href="favicon.ico" />
 	<script src="../lib/js/jquery-1.9.1.min.js"></script>
 	<script src="../js/base.js"></script>
 </head>
 <body>
-	<header>çˆ±è´­ç‰©&nbsp&nbspæƒ³ä½ æ‰€æƒ³</header>
+	<header>°®¹ºÎï&nbsp&nbspÏëÄãËùÏë</header>
 	<nav>
 		<ul>
-			<li>æ¬¢è¿Ž|</li>
-			<li>ç™»å½•|</li>
-			<li>æ³¨å†Œ</li>
+			<li>»¶Ó­|</li>
+			<li>µÇÂ¼|</li>
+			<li>×¢²á</li>
 		</ul>
 	</nav>
 	<div id="login" class="logshow">
 		<form  method="post" class="np">
-			<div class="sub">ç”¨æˆ·ç™»å½•</div>
-			<div class="sub"><label for="username">è´¦å·ï¼š</label> <input type="text" name="username"  id="username" /></div>
-			<div class="sub"><label for="password">å¯†ç ï¼š</label> <input type="password" name="password" id="password" /></div>
-			<div class="sub"><label ></label><input type="submit" value="ç™»å½•" /></div>
+			<div class="sub">ÓÃ»§µÇÂ¼</div>
+			<div class="sub"><label for="username">ÕËºÅ£º</label> <input type="text" name="username"  id="username" /></div>
+			<div class="sub"><label for="password">ÃÜÂë£º</label> <input type="password" name="password" id="password" /></div>
+			<div class="sub"><label ></label><input type="submit" value="µÇÂ¼" /></div>
 		</form>
 	</div>
 	<div  id="sign" class="sign">
